# fast-api-tested

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
tests/: test_main.py
