[tool.poetry]
name = "fast-api-tested"
version = "0.1.0"
description = "A FastAPI project with pytest"
authors = ["Your Name <you@example.com>"]
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
starlette = "^0.46.1"
uvicorn = "^0.34.0"

[poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
